--- a/media.css
+++ b/media.css
@@ -1,5 +1,5 @@
 @media (max-width: 1280px){
-  .cabecalho ul{
+  .header ul{
     display: none;
   }
   .bttnDesk{
@@ -10,26 +10,26 @@
   .mobim{
     display: none;
   }
-  .cabecalho{
+  .header{
     background-image: url(images/desktop/nasa-111.jpg);
     
   }
-  .cabecalho h1{
+  .header h1{
     margin: 0.5em;
     font-size: 4em;
   }
-  .hdrCont{
+  .fotoCont{
     margin: 9em;
     margin-top: 4em;
     margin-bottom: 10em;
   }
-  .hdrCont img{
+  .fotoCont img{
     width: 14vw;
   }
   .menu{
     width: auto;
   }
-  .cabecalho ul li{
+  .header ul li{
     margin-left: 2em;
     font-weight: 800;
     font-size: 1em;
@@ -91,31 +91,31 @@
   .anara{
     background-image: url(images/desktop/Anara\ eje.jpeg);
   }
-  .deep{
+  .maks{
     background-image: url(images/desktop/WhatsApp\ Image\ 2021-07-28\ at\ 00.59.52.jpeg);
   }
-  .night{
+  .jide{
     background-image: url(images/desktop/WhatsApp\ Image\ 2021-07-28\ at\ 00.59.52\ \(1\).jpeg);
   }
-  .soccer{
+  .elzada{
     background-image: url(images/desktop/WhatsApp\ Image\ 2021-07-28\ at\ 00.59.53.jpeg);
   }
-  .tgrid{
+  .aziz{
     background-image: url(images/desktop/WhatsApp\ Image\ 2021-07-28\ at\ 00.59.53\ \(1\).jpeg);
   }
-  .tgrid p{
+  .aziz p{
     width: 20%;
   }
-  .fuav{
+  .elnura{
     background-image: url(images/desktop/WhatsApp\ Image\ 2021-07-28\ at\ 00.59.54.jpeg);
   }
-  .pocket{
+  .urmat{
     background-image: url(images/desktop/WhatsApp\ Image\ 2021-07-28\ at\ 00.59.54\ \(1\).jpeg);
   }
-  .tcuri{
+  .janat{
     background-image: url(images/desktop/WhatsApp\ Image\ 2021-07-28\ at\ 00.59.55.jpeg);
   }
-  .fish{
+  .yrys{
     background-image: url(images/desktop/WhatsApp\ Image\ 2021-07-28\ at\ 00.59.55\ \(1\).jpeg);
   }
   .bttnMobi{
@@ -140,41 +140,41 @@
   .crea{
     margin: 0;
   }
-  .rodape{
+  .footer{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     margin-top: 11em;
   }
-  .rodape ul{
+  .footer ul{
     display: flex;
     margin-top: 2em;
   }
-  .rodape ul li{
+  .footer ul li{
     margin-left: 0;
   }
-  .rodColor{
+  .copyright{
     margin: 0;
     margin-top: 1em;
   }
-  .rodape .logord{
+  .footer .logord{
     width: 10vw;
     margin: 0;
   }
-  .roda1{
+  .icon1{
     align-items: flex-start;
    
     margin-left: 6em;
     
   }
-  .roda2{
+  .icon2{
     align-items: flex-end;
     text-align: end;
     margin-top: 2em;
     margin-right: 6em;
     margin-bottom: 2em;
   }
-  .sn{
+  .iconitems{
     margin: 0;
   }
 }
