done last version

--- a/media.css
+++ b/media.css
@@ -1,95 +1,144 @@
-@media (max-width: 1280px){
+@media (max-width: 980px){
   .cabecalho ul{
-    display: none;
+    display: none;/* display none- это коротко многоцелевое свойство, которое определяет, как элемент должень быть показан в документе. 
+                     display none- бул, кыскача айтканда, документте элементтин кантип көрсөтүлүшүн аныктоочу көп максаттуу касиет.*/
   }
-  .bttnDesk{
-    display: none;
-  }
+  
 }
-@media (min-width: 1280px){
+@media (min-width: 980px){/*@media-Правило @media позволяет указать тип носителя, для которого будет применяться указанный стиль. В качестве типов выступают различные устройства, например, принтер, КПК, монитор и др. В табл. 1 перечислены некоторые из них.
+                           @Media -эрежеси көрсөтүлгөн стиль колдонула турган медианын түрүн көрсөтүүгө мүмкүндүк берет. Түрлөрү ар кандай түзүлүштөр, мисалы, принтер, PDA, монитор ж. 1 алардын айрымдарын тизмектейт.*/
   .mobim{
     display: none;
   }
   .cabecalho{
-    background-image: url(images/desktop/nasa-111.jpg);
+    background-image: url(images/desktop/nasa-111.jpg);/* background-image .Устанавливает фоновое изображение для элемента
+                                                         background-image  Элементтин фондук сүрөтүн коет*/
     
   }
   .cabecalho h1{
-    margin: 0.5em;
-    font-size: 4em;
+    margin: 0.5em;/* margin-Свойство margin позволяет задать величину отступа сразу для всех сторон элемента или определить её только для указанных сторон.
+                     margin- элементтин бардык жактары үчүн чегинүүнүн өлчөмүн бир убакта коюуга же аны көрсөтүлгөн тараптар үчүн гана аныктоого мүмкүндүк берет.   */
+    font-size: 4em;/* font-size - определяет размер шрифта
+                     font-size -  ариптин өлчөмүн аныктайт*/
   }
   .hdrCont{
     margin: 9em;
-    margin-top: 4em;
-    margin-bottom: 10em;
+    margin-top: 4em;/* margin-top - отступ от верхнего края элемента
+                       margin-top -элементтин жогорку четинен толтуруу*/
+    margin-bottom: 10em;/*margin-bottom - это отступ от нижнего края элемента
+                          margin-bottom - бул элементтин астынкы четинен толтуруу*/
   }
   .hdrCont img{
-    width: 14vw;
+    width: 14vw;/* width - определяет ширину блока, Н: px; En; Pt-пункты,проценты, auto
+                   width -блокhтун туурасын аныктайт*/
   }
   .menu{
     width: auto;
   }
   .cabecalho ul li{
-    margin-left: 2em;
-    font-weight: 800;
-    font-size: 1em;
+    margin-left: 2em;/* margin-left - отступ от левого края элемента
+                        margin-left - элементтин сол четинен толтуруу*/
+    font-weight: 800;/* font-weight - установливает насыщенность шрифта Н: bold, bold light, 100-900 насыщенность 
+                        font-weight - шрифттин салмагын белгилейт М:кайраттуу, тайманбас жарык, 100-900 каныктыруу*/
+    font-size: 1em; /*font-size - размер шрифта Н: small,medium,large H: 1em - xxsmall 
+                      font-size - шрифт өлчөмү*/
   }
   .wraptext{
-    width: 42em;
-    margin-bottom:2em;
-    margin-top: 6em;
+    width: 42em;/* width - определяет ширину блока, Н: px; En; Pt-пункты,проценты, auto
+                   width -блокhтун туурасын аныктайт*/
+    margin-bottom:2em;/*margin-bottom - это отступ от нижнего края элемента
+                        margin-bottom - бул элементтин астынкы четинен толтуруу*/
+    margin-top: 6em;/* margin-top - отступ от верхнего края элемента
+                       margin-top -элементтин жогорку четинен толтуруу*/
   }
   section img{
-    width: 20em;
-    align-self: flex-start;
-    margin-top: 10em;
-    border-radius: 380px;
+    width: 20em;/* width - определяет ширину блока, Н: px; En; Pt-пункты,проценты, auto
+                   width -блокhтун туурасын аныктайт*/
+    align-self: flex-start;/*align-self - выравнивает флекс-элементы текущей строки, переписывая значение align-items flex-start - Элемент выравнивается в начале поперечной оси контейнера.
+                             align-self - учурдагы сызыктын ийкемдүү элементтерин тегиздеп, маанини кайра жазат   flex-start - Элемент контейнердин кайчылаш огунун башталышында тегизделет.*/
+    margin-top: 10em;/* margin-top - отступ от верхнего края элемента
+                        margin-top -элементтин жогорку четинен толтуруу*/
+    border-radius: 380px;/*border-radius - Устанавливает радиус скругления уголков рамки. Если рамка не задана, то скругление также происходит и с фоном.
+                           border-radius - Рамканын бурчтарын тегеректөө радиусун коёт. Эгерде кадр көрсөтүлбөсө, фон да тегеректелген.*/
   }
   .imgText{
-    display: flex;
-    position: relative;
-    width: 70em;
+    display: flex;/*display-Многоцелевое свойство, которое определяет, как элемент должен быть показан в документе. 
+                    display-Документте элементтин кантип көрсөтүлүшүн аныктоочу көп максаттуу касиет.*/
+    position: relative;/*  position - Устанавливает способ позиционирования элемента относительно окна браузера или других объектов на веб-странице.
+                           position - Элементтин браузердин терезесине же веб -беттеги башка объектилерге карата жайгашуусун аныктайт.
+                           relative- относительное позиционирование
+                           relative- салыштырмалуу жайгашуу*/
+    width: 70em;/* width - определяет ширину блока, Н: px; En; Pt-пункты,проценты, auto
+                   width -блокhтун туурасын аныктайт*/
     
     
   }
   section p{
-    width: auto;
-    margin: 0;
+    width: auto;/* width - определяет ширину блока, Н: px; En; Pt-пункты,проценты, auto
+                   width -блокhтун туурасын аныктайт*/
+    margin: 0;/* margin-Свойство margin позволяет задать величину отступа сразу для всех сторон элемента или определить её только для указанных сторон.
+                 margin- элементтин бардык жактары үчүн чегинүүнүн өлчөмүн бир убакта коюуга же аны көрсөтүлгөн тараптар үчүн гана аныктоого мүмкүндүк берет.*/
   }
   section h1{
-    font-size: 3em;
-    margin-top: 0;
+    font-size: 3em;/*font-size - размер шрифта Н: small,medium,large H: 1em - xxsmall 
+                     font-size - шрифт өлчөмү*/
+    margin-top: 0;/* margin-top - отступ от верхнего края элемента
+                     margin-top -элементтин жогорку четинен толтуруу*/
   }
   article{
-    position: absolute;
-    bottom:0;
-    left: 40%;
-    margin: 60px;
-    max-width: 30em;
-    text-align: left;
-    padding: 5em;
-    padding-bottom: 0;
-    padding-right: 0;
+    position: absolute;/*  position - Устанавливает способ позиционирования элемента относительно окна браузера или других объектов на веб-странице
+                           position - Элементтин браузердин терезесине же веб -беттеги башка объектилерге карата жайгашуусун аныктайт.
+                           absolute - Абсолютное позиционирование
+                           absolute -Абсолюттук позиция*/
+    bottom:0;/* bottom - Устанавливает положение нижнего края содержимого элемента без учёта толщины рамок и отступов.
+                bottom - Чек аранын калыңдыгын жана толтурууну эске албаганда, элементтин мазмунунун төмөнкү четинин ордун белгилейт.*/
+                
+    left: 40%;/*left - определяет расстояние от левого края родительского элемента, не включая отступ, поле и ширину рамки, до левого края дочернего элемента
+                left - баланын сол четине чейин толтурууну, маржаны жана чек туурасын эске албаганда, ата -эненин сол четинен чейинки аралыкты аныктайт
+    */
+    margin: 60px;/* margin-Свойство margin позволяет задать величину отступа сразу для всех сторон элемента или определить её только для указанных сторон.
+                   margin- элементтин бардык жактары үчүн чегинүүнүн өлчөмүн бир убакта коюуга же аны көрсөтүлгөн тараптар үчүн гана аныктоого мүмкүндүк берет. */
+    max-width: 30em;/* max-width -Устанавливает максимальную ширину элемента.
+                       max -width -Элементтин максималдуу туурасын белгилейт
+    */
+    text-align: left;/* text-align -Определяет горизонтальное выравнивание текста в пределах элемента.Н: left,center,justify, right, start...
+                        text-align -Элементтин ичиндеги тексттин горизонталдык тегизделишин аныктайт.
+    */
+    padding: 5em;/* padding - Устанавливает значение полей вокруг содержимого элемента.
+                    padding - Элементтин мазмунунун тегерегиндеги чектердин маанисин коет.*/
+    padding-bottom: 0;/*padding-bottom-Устанавливает значение поля от нижнего края содержимого элемента. Полем называется расстояние от внутреннего края рамки элемента до воображаемого прямоугольника, ограничивающего его содержимое
+                        padding-bottom - бул элементтин чек арасынын ички четинен элестетилген тик бурчтукка чейинки аралык */
+    padding-right: 0;/*padding-right-Устанавливает значение поля от правого края содержимого элемента. Полем называется расстояние от внутреннего края рамки элемента до воображаемого прямоугольника, ограничивающего его содержимое
+                      padding-right- элементтин мазмунунун оң четинен коёт. padding - бул элементтин чек арасынын ички четинен элестетилген тик бурчтукка чейинки аралык      */
     
   }
   .mainGrid{
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto auto; /* grid-template-columns - задаёт количество столбцов "колонок" в сетке и может определять ширину каждой из них.
+                                              grid-template-columns -  тордогу "мамычалар" мамычаларынын санын белгилейт жана алардын ар биринин туурасын аныктай алат.
+    */
   }
   .box{
-    width: 20em;
-    height: 22em;
-    margin: 1em;
-    font-size: 1.3em;
+    width: 20em;/* width - определяет ширину блока, Н: px; En; Pt-пункты,проценты, auto
+                   width -блокhтун туурасын аныктайт*/
+    height: 22em;/*heigh - Устанавливает высоту блочных или заменяемых элементов 
+                   heigh - Блоктун же алмаштырылуучу элементтердин бийиктигин белгилейт */
+    margin: 1em;/* margin-Устанавливает величину отступа от каждого края элемента.
+                   margin-Элементтин ар бир четинен толтуруунун көлөмүн белгилейт.*/
+    font-size: 1.3em;/*font-size - размер шрифта Н: small,medium,large H: 1em - xxsmall */
   }
   .box p{
-    margin-left: 1em;
-    width: 6em;
+    margin-left: 1em;/* margin-left - отступ от левого края элемента
+                        margin-left - элементтин сол четинен толтуруу*/
+    width: 6em;/* width - определяет ширину блока, Н: px; En; Pt-пункты,проценты, auto
+                  width - блоктун туурасын аныктайт*/
   }
   .grad{
     background: linear-gradient(0deg, rgba(0,0,0,0.70) 0%, rgba(0,0,0,0) 100%);
   }
   .anara{
-    background-image: url(images/desktop/Anara\ eje.jpeg);
+    background-image: url(images/desktop/Anara\ eje.jpeg);/*background-image - Устанавливает фоновое изображение для элемента.
+                                                            background-image -Элементтин фондук сүрөтүн коет.
+    */
   }
   .deep{
     background-image: url(images/desktop/WhatsApp\ Image\ 2021-07-28\ at\ 00.59.52.jpeg);
@@ -119,26 +168,28 @@
     background-image: url(images/desktop/WhatsApp\ Image\ 2021-07-28\ at\ 00.59.55\ \(1\).jpeg);
   }
   .bttnMobi{
-    display: none;
+    display: none;/* display none- это коротко многоцелевое свойство, которое определяет, как элемент должень быть показан в документе. */
   }
   .btnnCrea{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 76em;
-    margin-bottom: 4em;
-    margin-top: 11em;
+    display: flex;/* background-Устанавливает фоновое изображение для элемента.*/
+    align-items: center;/*align-self - выравнивает флекс-элементы текущей строки, переписывая значение align-items flex-start - Элемент выравнивается в начале поперечной оси контейнера.*/
+    justify-content: space-between;/*justify-content -Определяет, как браузер распределяет пространство вокруг флекс-элементов вдоль главной оси контейнера.
+                                     justify-content -Браузер контейнердин негизги огу боюнча ийкемдүү нерселердин тегерегиндеги мейкиндикти кантип бөлүштүрөрүн аныктайт.
+    */
+    width: 76em;/* width - определяет ширину блока, Н: px; En; Pt-пункты,проценты, auto*/
+    margin-bottom: 4em;/*margin-bottom - это отступ от нижнего края элемента*/
+    margin-top: 11em;/* margin-top - отступ от верхнего края элемента*/
   }
   .bttnDesk{
-    width: 10em;
-    height: 3em;
+    width: 10em;/* width - определяет ширину блока, Н: px; En; Pt-пункты,проценты, auto*/
+    height: 3em;/*heigh - определяет блока блока */
     border: 1px solid black;
     background-color: white;
     letter-spacing:5px;
-    font-size: 1em;
+    font-size: 1em;/*font-size - размер шрифта Н: small,medium,large H: 1em - xxsmall */
   }
   .crea{
-    margin: 0;
+    margin: 0;/* margin-top - отступ*/
   }
   .rodape{
     flex-direction: row;
